[package]
name = "voyager-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Axum
axum = "0.6.4"
reqwest = "0.11.22"

# Serde/json
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }


[dev-dependencies]
httpc-test = "0.1.5"
anyhow = "1"
